--- a/Maravilhosa/style.css
+++ b/Maravilhosa/style.css
@@ -2,238 +2,257 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-  }
+    font-family:  'Abel', sans-serif;;
+    font-size: 15px;
+}
   
-  a {
-      text-decoration: none;
-      color: inherit;
-      margin: 2px;
-  }
+
+a {
+    text-decoration: none;
+    color: inherit;
+    margin: 2px;
+}
   
-  /* NAVBAR */
+/* NAVBAR */
   
-  .navbar{
-      background-color: #C083B9;
-      width: 100%;
-      height: 85px;
-  }
+.navbar{
+    background-color: rgb(141, 21, 121); 
+    width: 100%;
+    height: 85px;
+}
   
-  .navbar_logotipo {
-      text-align: center;
-      padding: 5px;
-  }
+.navbar_logotipo {
+    text-align: center;
+    padding: 5px;
+}
   
-  /* -------------------------------------------------------------------------------- */
-  
-  
-  /* HEADER */
-  
-  .header {
-      background-image: url(./img/backgroud_header_01.jpg);
-      background-size: cover;
-      background-repeat: no-repeat;
-      min-height: 80vh;
-      width: 100%;
-      height: 500px;
-      color: #ffffff;
-  }
-  
-  .container_header {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      padding: 30px;
-      flex-direction: column;
-  }
-  
-  /* .header_container_img{
-      width: 500px;
-      height: 300px;
-      position: absolute;
-      top: 30%;
-      left: 40%;
-  }  */
-  
-  .header_maravilhosa_img{
-      width: 90%;
-      height: 220px;
-      margin-left: 20px;
-      margin-top: 50px;
-  }
-  
-  .header_titulo {
-      width: 90%;
-      margin: 5px 10px 5px 10px;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-  }
+/* -------------------------------------------------------------------------------- */
   
   
-  /* --- BOTAO --- */
+/* HEADER */
+
+.header {
+    display: flex;
+    flex-wrap:nowrap;
+    justify-content: center;
+    background: linear-gradient( rgb(141, 21, 121), #ffff);
+    color: #080808;
+    padding-right: 8vw;
+}
+
+.container_header {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content:center ;
+    flex-direction: row;
+    padding:20vh;
     
-  .header_button {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 150px;
-      height: 40px;
-      background: #7F479B;
-      border-radius: 5px;
-      color: #ffffff;
-      text-decoration: none;
-      list-style: none;
-      font-size: 18px;
-      font-weight: bold;
-      letter-spacing: 0.5px;
-      margin-top: 40px;
-  }
+} 
+
+.header_maravilhosa_img{
+    border: dotted black;
+    border-radius: 10px;
+    width: 100%;
+    height: 40vh;
+}
+
+h1{
+  font-size:2rem ;
+}
+
+.header_titulo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    text-align: center;
+    margin-top:30px;
+}
   
-  .header_button:hover {
-      background-color: #2e1842;
-      color: #ffffff;
-      transition: background-color .5s;
-  }
+  
+/* --- BOTAO --- */
+    
+.header_button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    height: 40px;
+    border-radius: 5px;
+    color: #ffffff;
+    text-decoration: none;
+    list-style: none;
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 0.5px;
+    margin-top: 40px;
+}
+  
+.header_button {
+    background-color: rgb(141, 21, 121);
+    color: #ffffff;
+    transition: background-color .5s;
+    border: dotted black ;
+}
   
   
-  
+/*BODY*/
   
   /* SECAO Maravilhosa */
-  .maravilhosa {
-      background-color: #fad8e5;
-      align-items: center;
-      width: 100%;
-      height: 100%;
-      padding-bottom: 25px;
-  }
+
+  .lista{
+    width: 45vw;
+    height: 150vh;
+    border-radius: 10px;
+    padding: 16px;
+    transition: 0.5s all;
+    background: linear-gradient(  #ffff,rgb(226, 201, 222));
+    border-style: dotted;
+}
+.container-listas{
+    display: flex;
+    flex-wrap:nowrap;
+    justify-content: space-between; 
+    margin: 0 3%;
+    flex-wrap:wrap;
+
+}
+
   
-  .container_maravilhosa {
-      text-align: center;
-      padding: 0 5%;
-  }
+.maravilhosa_titulo, .suaHistoria_titulo, .autora_titulo {
+    color: rgb(141, 21, 121);
+    font-size: 40px;
+    text-align: center;
+    font-weight: bold;
+    padding-top: 40px;
+    letter-spacing: 2px;
+    padding: 30px;
+    line-height:50px;
+}
   
-  .maravilhosa_titulo{
-      color: #ea4c89;
-      font-size: 40px;
-      text-align: center;
-      font-weight: bold;
-      padding-top: 40px;
-  }
+.maravilhosa_boxBorder{
+    display:flex;
+    flex-wrap:nowrap;
+    border:1px dotted #030303;
+    border-radius:10px;
+    margin: 42px;
+}
   
-  .maravilhosa_boxBorder{
-      border:1px solid #674582;
-      margin: 42px;
-  }
+.boxBorder_texto, .suaHistoria_texto{
+    margin: 30px;
+    color: #050505;
+    text-align: center;
+    padding:3%;
+    line-height: 25px;
+}
   
-  .boxBorder_texto{
-      margin: 30px;
-      color: #462755;
-      text-align: center;
-  }
+.container_suaHistoria{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
+    color: #050505;
+}
   
-  .container_suaHistoria{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      color: #674582;
-  }
+.suaHistoria_imagem {
+    width: 40%;
+}
+
   
-  .suaHistoria_imagem {
-      width: 40%;
-      margin-bottom: 30px;
+/* AUTORA */
+
   
-  }
+.autora_sobre{
+    display: flex;
+    flex-wrap: nowrap;
+    text-align:justify;
+    padding:5%;
+    line-height: 25px;
+}
   
-  .suaHistoria_texto{
-      width: 100%;
-  }
+.autora_imagem {
+    width: 25%;
+    height: 25%;
+    border-radius: 50%;
+    margin-right: 35px;
+}
+
+/* FOOTER */
+
+.footer {
+    background: rgb(141, 21, 121);
+    color: #f3f3f3;
+    margin-top:20vh;
+    margin-bottom: 0px;
+}
   
-  .suaHistoria_titulo{
-      color: #462755;
-      padding-bottom: 10px;
-  }
+.footer_menu{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    margin: 10px 60px;
+    font-size: 1.4rem;
+    padding: 30px;
+}
   
-  .suaHistoria_paragrafo{
-      padding-bottom: 10px;
-  }
-  
-  /* AUTORA */
-  .autora {
-      background-color: #b6dbf1d2;
-      align-items: center;
-      width: 100%;
-      height: 600px;
-      margin-top: 60px;
-      padding: 60px;
-  }
-  
-  .autora_titulo{
-      text-align: center;
-      color: #ea4c89;
-      font-size: 32px;
-      font-weight: bold;
-      letter-spacing: 1px;
-      padding: 30px;
-  }
-  
-  .autora_sobre{
-      display: flex;
-  }
-  
-  .autora_imagem {
-      width: 20%;
-      border-radius: 50%;
-      margin-right: 35px;
-  }
-  
-  /* FOOTER */
-  .footer {
-      background: #ea4c89;
-      color: #f3f3f3;
-  }
-  
-  .footer_menu{
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: space-around;
-      margin: 10px 60px;
-      font-size: 1.4rem;
-      padding: 30px;
-  }
-  
-  .footer_links {
-      display: block;
-      text-align: center;
-      list-style: none;
-  }
+.footer_links {
+    display: block;
+    text-align: center;
+    list-style: none;
+}
   
   
-  .footer_cc {
-      background: #5B5E5E;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-  }
+.footer_cc {
+    background: rgb(141, 21, 121);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
   
-  /* MEDIA QUERY */
-  
-  @media (min-width: 768px){
-      .container_header {
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-      }
-  
-      .header_maravilhosa_img{
-          width: 100%;
-          height: 350px;
-          margin-bottom: 180px;
-          margin-left: 8px;
-      }
-  }
-  
+/* MEDIA QUERY */
+
+@media (max-width: 768px){
+
+.container_header {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content:center ;
+    flex-direction: column;
+}
+.header_maravilhosa_img{
+    width: 100%;
+    height: 100%;
+    border: dotted black;
+    border-radius: 10px;
+    margin-top:10vh;
+    margin-right:50vw;
+}
+.container-listas{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-items: space-between ;
+    width: 90%;
+    height: 100%;
+}
+.lista{
+    width:90%;
+    height: auto;
+
+}
+.autora_sobre{
+    display:flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
+}
+.autora_imagem{
+    width:50%;
+    height: 50%;
+    margin-bottom:30px;
+}
+}
